[package]
name = "bevy_mod_lookat"
version = "0.4.1"
edition = "2021"
description = "A microplugin for Bevy, that allows adding a component to an entity, that makes it target either an entity, or a position"
authors = ["Kristoffer Ödmark <kristoffer.odmark90@gmail.com>"]
license = "MIT"
repository = "https://github.com/TotalKrill/bevy_mod_lookat.git"
readme = "README.md"

[dependencies]
bevy = { version = "0.16.0", default-features = false }

[dev-dependencies.bevy]
version = "0.16.0"
features = ["dynamic_linking"]
