[package]
name = "bevy_mod_lookat"
version = "0.6.0"
edition = "2021"
description = "A microplugin for Bevy, that allows adding a component to an entity, that makes it target either an entity, or a position"
authors = ["Kristoffer Ödmark <kristoffer.odmark90@gmail.com>"]
license = "MIT"
repository = "https://github.com/TotalKrill/bevy_mod_lookat.git"
readme = "README.md"


[features]
default = ["bevy_std", "bevy-support"]

bevy_std = ["bevy_math/std"]
bevy-support = ["bevy_transform/bevy-support"]

[dependencies]
bevy_app = { version = "0.18", default-features = false }
bevy_ecs = { version = "0.18", default-features = false, features = ["bevy_reflect"] }
bevy_math = { version = "0.18", default-features = false, features = ["bevy_reflect"] }
bevy_reflect = { version = "0.18", default-features = false }
bevy_transform = { version = "0.18", default-features = false }

[dev-dependencies]
bevy = { version = "0.18", default-features = false, features = ["3d"] }
